fix threejs overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ body {
 }
 
 .canvas {
-  width: 100%;
+  min-width: 100%;
 }
 
 .name{
